# QControlBinder

./: CMakeLists.txt  LICENSE  QControlBinder.hpp  README.md  README_zhCN.md
demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
utils/: log.hpp
